--- a/DSD.qsf
+++ b/DSD.qsf
@@ -62,6 +62,9 @@ set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VHDL_FILE dezctr/ioctrl/decoder/decoder_struc.vhd
+set_global_assignment -name VHDL_FILE dezctr/ioctrl/decoder/decoder.vhd
 set_global_assignment -name VHDL_FILE dezctr/ioctrl/debounce/debounce_struc.vhd
 set_global_assignment -name VHDL_FILE dezctr/ioctrl/debounce/debounce.vhd
 set_global_assignment -name VHDL_FILE dezctr/cntr/prescaler/prescaler_struc.vhd
@@ -72,4 +75,3 @@ set_global_assignment -name VHDL_FILE dezctr/cntr/cntr_struc.vhd
 set_global_assignment -name VHDL_FILE dezctr/cntr/cntr.vhd
 set_global_assignment -name VHDL_FILE dezctr/dezctr_struc.vhd
 set_global_assignment -name VHDL_FILE dezctr/dezctr.vhd
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
