--- a/DSD.qsf
+++ b/DSD.qsf
@@ -74,4 +74,5 @@ set_global_assignment -name VHDL_FILE dezctr/cntr/cntr_struc.vhd
 set_global_assignment -name VHDL_FILE dezctr/cntr/cntr.vhd
 set_global_assignment -name VHDL_FILE dezctr/dezctr_struc.vhd
 set_global_assignment -name VHDL_FILE dezctr/dezctr.vhd
+set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
