--- a/DSD.qsf
+++ b/DSD.qsf
@@ -77,4 +77,96 @@ set_global_assignment -name VHDL_FILE dezctr/cntr/cntr_struc.vhd
 set_global_assignment -name VHDL_FILE dezctr/cntr/cntr.vhd
 set_global_assignment -name VHDL_FILE dezctr/dezctr_struc.vhd
 set_global_assignment -name VHDL_FILE dezctr/dezctr.vhd
+set_location_assignment PIN_G21 -to clk50
+set_location_assignment PIN_H2 -to pb_i[1]
+set_location_assignment PIN_G3 -to pb_i[0]
+set_location_assignment PIN_F1 -to reset_n
+set_location_assignment PIN_J6 -to sw_i[0]
+set_location_assignment PIN_H5 -to sw_i[1]
+set_location_assignment PIN_H6 -to sw_i[2]
+set_location_assignment PIN_D2 -to sw_i[9]
+set_location_assignment PIN_E4 -to sw_i[8]
+set_location_assignment PIN_E3 -to sw_i[7]
+set_location_assignment PIN_H7 -to sw_i[6]
+set_location_assignment PIN_J7 -to sw_i[5]
+set_location_assignment PIN_G5 -to sw_i[4]
+set_location_assignment PIN_G4 -to sw_i[3]
+set_location_assignment PIN_D13 -to ss0_o[7]
+set_location_assignment PIN_F13 -to ss0_o[6]
+set_location_assignment PIN_F12 -to ss0_o[5]
+set_location_assignment PIN_G12 -to ss0_o[4]
+set_location_assignment PIN_H13 -to ss0_o[3]
+set_location_assignment PIN_H12 -to ss0_o[2]
+set_location_assignment PIN_F11 -to ss0_o[1]
+set_location_assignment PIN_E11 -to ss0_o[0]
+set_location_assignment PIN_B15 -to ss1_o[7]
+set_location_assignment PIN_A15 -to ss1_o[6]
+set_location_assignment PIN_E14 -to ss1_o[5]
+set_location_assignment PIN_B14 -to ss1_o[4]
+set_location_assignment PIN_A14 -to ss1_o[3]
+set_location_assignment PIN_C13 -to ss1_o[2]
+set_location_assignment PIN_B13 -to ss1_o[1]
+set_location_assignment PIN_A13 -to ss1_o[0]
+set_location_assignment PIN_A18 -to ss2_o[7]
+set_location_assignment PIN_F14 -to ss2_o[6]
+set_location_assignment PIN_B17 -to ss2_o[5]
+set_location_assignment PIN_A17 -to ss2_o[4]
+set_location_assignment PIN_E15 -to ss2_o[3]
+set_location_assignment PIN_B16 -to ss2_o[2]
+set_location_assignment PIN_A16 -to ss2_o[1]
+set_location_assignment PIN_D15 -to ss2_o[0]
+set_location_assignment PIN_G16 -to ss3_o[7]
+set_location_assignment PIN_G15 -to ss3_o[6]
+set_location_assignment PIN_D19 -to ss3_o[5]
+set_location_assignment PIN_C19 -to ss3_o[4]
+set_location_assignment PIN_B19 -to ss3_o[3]
+set_location_assignment PIN_A19 -to ss3_o[2]
+set_location_assignment PIN_F15 -to ss3_o[1]
+set_location_assignment PIN_B18 -to ss3_o[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to clk50
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pb_i[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pb_i[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to reset_n
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss0_o[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss0_o[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss0_o[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss0_o[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss0_o[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss0_o[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss0_o[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss0_o[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss1_o[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss1_o[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss1_o[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss1_o[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss1_o[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss1_o[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sw_i[9]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sw_i[8]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sw_i[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sw_i[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sw_i[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sw_i[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sw_i[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sw_i[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sw_i[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sw_i[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss3_o[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss3_o[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss3_o[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss3_o[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss3_o[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss3_o[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss3_o[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss3_o[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss2_o[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss2_o[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss2_o[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss2_o[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss2_o[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss2_o[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss2_o[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss1_o[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss1_o[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ss2_o[4]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
